# TPPython

./: .gitignore  README.md  notes.py  pyproject.toml  tp5exo5.py  verification.py
R1.07/TP1/: tp1exo1.py  tp1exo2.py  tp1exo4.py
R1.07/TP2/: age.py  tp2exo5.py
R1.07/TP3/: tp3exo4.py  velo.py
R1.07/TP4/: MostFrequent.py  tp4exo6.py  tp4exo7.py
R1.07/TP5/: notes.py  palindrome.py  tp5exo4.py  tp5exo6.py
R1.07/TP6/: tp6ex2.py
R2.08/TD1/: argument.py  find1.py  find2.py  find3.py
R2.08/TP1/: main.py
R2.08/TP2/: main.py
R2.08/TP3/: bibliotheque.py  film.py  main.py  movies.json
TP1/: tp1exo3.py
TP2/: TP2_swap.py  fondue.py  tp2exo1.py  tp2exo6.py  tp2exo7.py  tp2exo8.py
TP3/: tp3exo1.py  tp3exo2.py  tp3exo3.py  velo.py
TP4/: MostFrequentPartie2.py  Scalaire.py  VerificationDate.py  tp4exo1.py  tp4exo2.py  tp4exo8.py
TP5/: nomprenom.py  palindrome.py  tp5exo6.py  verification.py
TP6/: tp6ex1.py  tp6ex3.py  tp6ex4.py  tp6ex5.py
