[tool.poetry]
name = "tp5"
version = "0.1.0"
description = ""
authors = ["Julien Mauroy <pro.julien.mauroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^23.11.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
