[project]
authors = [
    {name = "Julien Mauroy", email = "pro.julien.mauroy@gmail.com"},
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "black<24.0.0,>=23.11.0",
    "isort<6.0.0,>=5.12.0",
]
name = "tp5"
version = "0.1.0"
description = ""
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
